<resources>
    <string name="app_name">Mssage</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>
    <string name="startString">☜ 点击进入</string>
    <string name="description">&#160;&#160;&#160;&#160;&#160;放寒假的规划的法国大范甘迪规划都是法国的风格服饰，更开放过海关的崇高的。法规和地方规划是否该说法是否感受到，水电费工信部发布官方公会会更好。放寒假法规和东莞的非官方个广告，符合国际法和电话。</string>
    <string name="introduce">医师简介</string>
    <string name="actives">活动掠影</string>
    <string name="customerHome">病友之家</string>
    <string name="questionAndAnser">有问有答</string>
    <string name="education">健康知识</string>
    <string name="appointment">预约服务</string>
    <string name="drName">李时珍</string>
    <string name="drDegree">主治医师</string>
    <string name="drProfession">专注于脊椎疾病</string>
    <string name="appointDate">预约时间</string>
    <string name="personNum">设定预约人数</string>
    <string name="customerselect">设定病人</string>
    <string name="sureClick">确定</string>
    <string name="cancelClick">取消</string>
    <string name="arrangeAdd">添加预约病人</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="person">人</string>
    <string name="tishi">设定病人及预约时间</string>
    <string name="username">用户名</string>
    <string name="usercode">密码</string>
    <string name="recode">重新输入密码</string>
    <string name="nameerror">您输入的用户名长度必须在1到6之间</string>
    <string name="codeerror">您输入的密码长度必须在5到10之间</string>
    <string name="recodeerror">您两次输入的密码不一致</string>
    <string name="wrongname">您输入的用户名中有非法字符</string>
    <string name="wrongcode">您输入的密码中有非法字符</string>
    <string name="inppputnull">用户名与密码不能为空</string>
    <string name="hello_world">Hello world!</string>
    <string name="replycontent">您的回答</string>
    <string name="selectPic">选择头像</string>
    <string name="uploadPic">上传头像</string>
    <string name="appointment_full">该日预约已满</string>
    <string name="set_success">设定成功</string>
    <string name="change_success">更改成功</string>
    <string name="set_person">请先设定该日预约人数!</string>
    <string name="reArrange_person">预约已满，先调整预约人数!</string>
    <string name="appointmented">该用户已有预约!</string>
    <string name="cancel_appointmentInfo">撤销预约</string>
    <string name="cancel_success">撤销预约成功</string>
    <string name="cancel_request">撤销申请发出，等待医师确认</string>
    <string name="update_appointmentInfo">更改预约</string>
    <string name="change_appointment">更改预约时间</string>
    <string name="chang_request">更改申请发出，等待医师确认</string>
    <string name="sure_register">请您先注册</string>
    <string name="name_exist">该用户名已经注册</string>
    <string name="favorite">收藏</string>
    <string name="register">注册</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">欢迎您</string>
    <string name="title_activity_login">注册</string>
    <string name="title_activity_error">出错了</string>
    <string name="title_activity_introduce">医师简介</string>
    <string name="title_activity_actives">活动剪影</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_sharing">SharingActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_question">有问有答</string>
    <string name="title_activity_appointment">预约服务</string>
    <string name="title_activity_appointmentinfo">预约列表</string>
    <string name="title_activity_arrange">ArrangeActivity</string>
    <string name="title_activity_education">EducationActivity</string>
</resources>
