<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:orderInCategory="0"
        android:icon="@drawable/ma"
        android:title="@string/introduce"/>
    <item
        android:orderInCategory="1"
        android:icon="@drawable/mb"
        android:title="@string/actives"/>

    <item
        android:orderInCategory="2"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/customerHome"/>

    <item
        android:orderInCategory="3"
        android:icon="@drawable/ic_headset"
        android:title="@string/questionAndAnser"/>
    <item
        android:orderInCategory="4"
        android:id="@+id/Sale"
        android:icon="@drawable/ic_event"
        android:title="@string/appointment"/>
    <item
        android:orderInCategory="5"
        android:icon="@drawable/ic_forum"
        android:title="@string/education"/>



</menu>
