<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <NumberPicker
            android:id="@+id/customer_Selector"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginRight="10dp"/>

        <NumberPicker
            android:id="@+id/hour_Selector"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/hour"/>

        <NumberPicker
            android:id="@+id/minute_Selector"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/minute"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:orientation="vertical">
            <Button
                android:id="@+id/add_appointmentInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/sureClick"/>
            <Button
                android:id="@+id/cancel_appointmentInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
