<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="240dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <NumberPicker
                android:id="@+id/monthSelector"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/month"/>
            <NumberPicker
                android:id="@+id/daySelector"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/day"/>
            <NumberPicker
                android:id="@+id/ahourSelector"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hour"/>
            <NumberPicker
                android:id="@+id/aminuteSelector"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/minute"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:id="@+id/appSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="确定" />
            <Button
                android:id="@+id/appCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="取消"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
